cmake_minimum_required(VERSION 3.2)
project(truecrypt_sha3_master)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Boot/Windows/Bios.h
    Boot/Windows/BootCommon.h
    Boot/Windows/BootConfig.cpp
    Boot/Windows/BootConfig.h
    Boot/Windows/BootConsoleIo.cpp
    Boot/Windows/BootConsoleIo.h
    Boot/Windows/BootDebug.cpp
    Boot/Windows/BootDebug.h
    Boot/Windows/BootDefs.h
    Boot/Windows/BootDiskIo.cpp
    Boot/Windows/BootDiskIo.h
    Boot/Windows/BootEncryptedIo.cpp
    Boot/Windows/BootEncryptedIo.h
    Boot/Windows/BootMain.cpp
    Boot/Windows/BootMain.h
    Boot/Windows/BootMemory.cpp
    Boot/Windows/BootMemory.h
    Boot/Windows/BootStrings.h
    Boot/Windows/Decompressor.c
    Boot/Windows/IntFilter.cpp
    Boot/Windows/IntFilter.h
    Boot/Windows/Platform.cpp
    Boot/Windows/Platform.h
    Build/Include/Makefile.inc
    Build/Resources/MacOSX/Info.plist.xml
    Common/Apidrvr.h
    Common/BaseCom.cpp
    Common/BaseCom.h
    Common/BootEncryption.cpp
    Common/BootEncryption.h
    Common/Cache.c
    Common/Cache.h
    Common/Cmdline.c
    Common/Cmdline.h
    Common/Combo.c
    Common/Combo.h
    Common/Common.h
    Common/Common.rc
    Common/Crc.c
    Common/Crc.d
    Common/Crc.h
    Common/Crc.o
    Common/Crypto.c
    Common/Crypto.h
    Common/Dictionary.c
    Common/Dictionary.h
    Common/Dlgcode.c
    Common/Dlgcode.h
    Common/EncryptionThreadPool.c
    Common/EncryptionThreadPool.h
    Common/Endian.c
    Common/Endian.d
    Common/Endian.h
    Common/Endian.o
    Common/Exception.h
    Common/Fat.c
    Common/Fat.h
    Common/Format.c
    Common/Format.h
    Common/GfMul.c
    Common/GfMul.d
    Common/GfMul.h
    Common/GfMul.o
    Common/Inflate.c
    Common/Inflate.h
    Common/Keyfiles.c
    Common/Keyfiles.h
    Common/Language.c
    Common/Language.h
    Common/Language.xml
    Common/Language.xml.h
    Common/Makefile
    Common/Password.c
    Common/Password.h
    Common/Pkcs5.c
    Common/Pkcs5.d
    Common/Pkcs5.h
    Common/Pkcs5.o
    Common/Progress.c
    Common/Progress.h
    Common/Random.c
    Common/Random.h
    Common/Registry.c
    Common/Registry.h
    Common/Resource.h
    Common/SecurityToken.cpp
    Common/SecurityToken.d
    Common/SecurityToken.h
    Common/SecurityToken.o
    Common/Sources
    Common/Tcdefs.h
    Common/Tests.c
    Common/Tests.h
    Common/Textual_logo_288dpi.bmp
    Common/Textual_logo_96dpi.bmp
    Common/Textual_logo_96dpi.bmp.h
    Common/Textual_logo_background.bmp
    Common/TrueCrypt.ico
    Common/TrueCrypt_mounted.ico
    Common/TrueCrypt_Volume.ico
    Common/Volumes.c
    Common/Volumes.h
    Common/Wipe.c
    Common/Wipe.h
    Common/Xml.c
    Common/Xml.h
    Common/Xts.c
    Common/Xts.h
    Core/Unix/FreeBSD/CoreFreeBSD.cpp
    Core/Unix/FreeBSD/CoreFreeBSD.h
    Core/Unix/FreeBSD/System.h
    Core/Unix/Linux/CoreLinux.cpp
    Core/Unix/Linux/CoreLinux.h
    Core/Unix/Linux/System.h
    Core/Unix/MacOSX/CoreMacOSX.cpp
    Core/Unix/MacOSX/CoreMacOSX.h
    Core/Unix/MacOSX/System.h
    Core/Unix/Solaris/CoreSolaris.cpp
    Core/Unix/Solaris/CoreSolaris.h
    Core/Unix/Solaris/System.h
    Core/Unix/CoreService.cpp
    Core/Unix/CoreService.h
    Core/Unix/CoreServiceProxy.h
    Core/Unix/CoreServiceRequest.cpp
    Core/Unix/CoreServiceRequest.h
    Core/Unix/CoreServiceResponse.cpp
    Core/Unix/CoreServiceResponse.h
    Core/Unix/CoreUnix.cpp
    Core/Unix/CoreUnix.h
    Core/Unix/MountedFilesystem.h
    Core/Unix/System.h
    Core/Core.h
    Core/CoreBase.cpp
    Core/CoreBase.h
    Core/CoreException.cpp
    Core/CoreException.h
    Core/FatFormatter.cpp
    Core/FatFormatter.h
    Core/HostDevice.cpp
    Core/HostDevice.h
    Core/MountOptions.cpp
    Core/MountOptions.h
    Core/RandomNumberGenerator.cpp
    Core/RandomNumberGenerator.h
    Core/VolumeCreator.cpp
    Core/VolumeCreator.h
    Crypto/Aes.h
    Crypto/Aes_hw_cpu.h
    Crypto/Aescrypt.c
    Crypto/Aeskey.c
    Crypto/Aesopt.h
    Crypto/AesSmall.c
    Crypto/AesSmall.h
    Crypto/Aestab.c
    Crypto/Aestab.h
    Crypto/Blowfish.c
    Crypto/Blowfish.h
    Crypto/Cast.c
    Crypto/Cast.h
    Crypto/crypto_hash.h
    Crypto/Des.c
    Crypto/Des.h
    Crypto/Rmd160.c
    Crypto/Rmd160.h
    Crypto/Serpent.c
    Crypto/Serpent.h
    Crypto/Sha1.c
    Crypto/Sha1.h
    Crypto/Sha2.c
    Crypto/Sha2.h
    Crypto/Sha3.c
    Crypto/Sha3.h
    Crypto/string.h
    Crypto/Twofish.c
    Crypto/Twofish.h
    Crypto/Whirlpool.c
    Crypto/Whirlpool.h
    Driver/Fuse/FuseService.cpp
    Driver/Fuse/FuseService.h
    Driver/DriveFilter.c
    Driver/DriveFilter.h
    Driver/DumpFilter.c
    Driver/DumpFilter.h
    Driver/EncryptedIoQueue.c
    Driver/EncryptedIoQueue.h
    Driver/Ntdriver.c
    Driver/Ntdriver.h
    Driver/Ntvol.c
    Driver/Ntvol.h
    Driver/Resource.h
    Driver/VolumeFilter.c
    Driver/VolumeFilter.h
    Format/FormatCom.cpp
    Format/FormatCom.h
    Format/InPlace.c
    Format/InPlace.h
    Format/Resource.h
    Format/Tcformat.c
    Format/Tcformat.h
    Format/TrueCrypt_Wizard.bmp.h
    Main/Forms/AboutDialog.cpp
    Main/Forms/AboutDialog.h
    Main/Forms/BenchmarkDialog.cpp
    Main/Forms/BenchmarkDialog.h
    Main/Forms/ChangePasswordDialog.cpp
    Main/Forms/ChangePasswordDialog.h
    Main/Forms/DeviceSelectionDialog.cpp
    Main/Forms/DeviceSelectionDialog.h
    Main/Forms/EncryptionOptionsWizardPage.cpp
    Main/Forms/EncryptionOptionsWizardPage.h
    Main/Forms/EncryptionTestDialog.cpp
    Main/Forms/EncryptionTestDialog.h
    Main/Forms/FavoriteVolumesDialog.cpp
    Main/Forms/FavoriteVolumesDialog.h
    Main/Forms/Forms.cpp
    Main/Forms/Forms.h
    Main/Forms/InfoWizardPage.cpp
    Main/Forms/InfoWizardPage.h
    Main/Forms/KeyfileGeneratorDialog.cpp
    Main/Forms/KeyfileGeneratorDialog.h
    Main/Forms/KeyfilesDialog.cpp
    Main/Forms/KeyfilesDialog.h
    Main/Forms/KeyfilesPanel.cpp
    Main/Forms/KeyfilesPanel.h
    Main/Forms/LegalNoticesDialog.cpp
    Main/Forms/LegalNoticesDialog.h
    Main/Forms/MainFrame.cpp
    Main/Forms/MainFrame.h
    Main/Forms/MountOptionsDialog.cpp
    Main/Forms/MountOptionsDialog.h
    Main/Forms/NewSecurityTokenKeyfileDialog.cpp
    Main/Forms/NewSecurityTokenKeyfileDialog.h
    Main/Forms/PreferencesDialog.cpp
    Main/Forms/PreferencesDialog.h
    Main/Forms/ProgressWizardPage.cpp
    Main/Forms/ProgressWizardPage.h
    Main/Forms/RandomPoolEnrichmentDialog.cpp
    Main/Forms/RandomPoolEnrichmentDialog.h
    Main/Forms/SecurityTokenKeyfilesDialog.cpp
    Main/Forms/SecurityTokenKeyfilesDialog.h
    Main/Forms/SelectDirectoryWizardPage.cpp
    Main/Forms/SelectDirectoryWizardPage.h
    Main/Forms/SingleChoiceWizardPage.h
    Main/Forms/VolumeCreationProgressWizardPage.cpp
    Main/Forms/VolumeCreationProgressWizardPage.h
    Main/Forms/VolumeCreationWizard.cpp
    Main/Forms/VolumeCreationWizard.h
    Main/Forms/VolumeFormatOptionsWizardPage.cpp
    Main/Forms/VolumeFormatOptionsWizardPage.h
    Main/Forms/VolumeLocationWizardPage.cpp
    Main/Forms/VolumeLocationWizardPage.h
    Main/Forms/VolumePasswordPanel.cpp
    Main/Forms/VolumePasswordPanel.h
    Main/Forms/VolumePasswordWizardPage.cpp
    Main/Forms/VolumePasswordWizardPage.h
    Main/Forms/VolumePropertiesDialog.cpp
    Main/Forms/VolumePropertiesDialog.h
    Main/Forms/VolumeSizeWizardPage.cpp
    Main/Forms/VolumeSizeWizardPage.h
    Main/Forms/WizardFrame.cpp
    Main/Forms/WizardFrame.h
    Main/Forms/WizardPage.h
    Main/Unix/Main.cpp
    Main/Application.cpp
    Main/Application.h
    Main/CommandLineInterface.cpp
    Main/CommandLineInterface.h
    Main/FatalErrorHandler.cpp
    Main/FatalErrorHandler.h
    Main/FavoriteVolume.cpp
    Main/FavoriteVolume.h
    Main/GraphicUserInterface.cpp
    Main/GraphicUserInterface.h
    Main/Hotkey.cpp
    Main/Hotkey.h
    Main/LanguageStrings.cpp
    Main/LanguageStrings.h
    Main/Main.h
    Main/Resources.cpp
    Main/Resources.h
    Main/StringFormatter.cpp
    Main/StringFormatter.h
    Main/System.cpp
    Main/System.h
    Main/SystemPrecompiled.h
    Main/TextUserInterface.cpp
    Main/TextUserInterface.h
    Main/UserInterface.cpp
    Main/UserInterface.h
    Main/UserInterfaceException.h
    Main/UserInterfaceType.h
    Main/UserPreferences.cpp
    Main/UserPreferences.h
    Main/VolumeHistory.cpp
    Main/VolumeHistory.h
    Main/Xml.cpp
    Main/Xml.h
    Mount/Drive_icon_96dpi.bmp.h
    Mount/Drive_icon_mask_96dpi.bmp.h
    Mount/Favorites.cpp
    Mount/Favorites.h
    Mount/Hotkeys.c
    Mount/Hotkeys.h
    Mount/Logo_96dpi.bmp.h
    Mount/MainCom.cpp
    Mount/MainCom.h
    Mount/Mount.c
    Mount/Mount.h
    Mount/Resource.h
    Platform/Unix/Directory.cpp
    Platform/Unix/File.cpp
    Platform/Unix/FilesystemPath.cpp
    Platform/Unix/Mutex.cpp
    Platform/Unix/Pipe.cpp
    Platform/Unix/Pipe.h
    Platform/Unix/Poller.cpp
    Platform/Unix/Poller.h
    Platform/Unix/Process.cpp
    Platform/Unix/Process.h
    Platform/Unix/SyncEvent.cpp
    Platform/Unix/System.h
    Platform/Unix/SystemException.cpp
    Platform/Unix/SystemInfo.cpp
    Platform/Unix/SystemLog.cpp
    Platform/Unix/Thread.cpp
    Platform/Unix/Time.cpp
    Platform/Buffer.cpp
    Platform/Buffer.h
    Platform/Directory.h
    Platform/Event.cpp
    Platform/Event.h
    Platform/Exception.cpp
    Platform/Exception.h
    Platform/File.h
    Platform/FileCommon.cpp
    Platform/FileStream.h
    Platform/FilesystemPath.h
    Platform/Finally.h
    Platform/ForEach.h
    Platform/Functor.h
    Platform/Memory.cpp
    Platform/Memory.h
    Platform/MemoryStream.cpp
    Platform/MemoryStream.h
    Platform/Mutex.h
    Platform/Platform.h
    Platform/PlatformBase.h
    Platform/PlatformTest.cpp
    Platform/PlatformTest.h
    Platform/Serializable.cpp
    Platform/Serializable.h
    Platform/Serializer.cpp
    Platform/Serializer.h
    Platform/SerializerFactory.cpp
    Platform/SerializerFactory.h
    Platform/SharedPtr.h
    Platform/SharedVal.h
    Platform/Stream.h
    Platform/StringConverter.cpp
    Platform/StringConverter.h
    Platform/SyncEvent.h
    Platform/System.h
    Platform/SystemException.h
    Platform/SystemInfo.h
    Platform/SystemLog.h
    Platform/TextReader.cpp
    Platform/TextReader.h
    Platform/Thread.h
    Platform/Time.h
    Platform/User.h
    Volume/Cipher.cpp
    Volume/Cipher.h
    Volume/Crc32.h
    Volume/EncryptionAlgorithm.cpp
    Volume/EncryptionAlgorithm.h
    Volume/EncryptionMode.cpp
    Volume/EncryptionMode.h
    Volume/EncryptionModeCBC.cpp
    Volume/EncryptionModeCBC.h
    Volume/EncryptionModeLRW.cpp
    Volume/EncryptionModeLRW.h
    Volume/EncryptionModeXTS.cpp
    Volume/EncryptionModeXTS.h
    Volume/EncryptionTest.cpp
    Volume/EncryptionTest.h
    Volume/EncryptionThreadPool.cpp
    Volume/EncryptionThreadPool.h
    Volume/Hash.cpp
    Volume/Hash.h
    Volume/Keyfile.cpp
    Volume/Keyfile.h
    Volume/Pkcs5Kdf.cpp
    Volume/Pkcs5Kdf.h
    Volume/Version.h
    Volume/Volume.cpp
    Volume/Volume.h
    Volume/VolumeException.cpp
    Volume/VolumeException.h
    Volume/VolumeHeader.cpp
    Volume/VolumeHeader.h
    Volume/VolumeInfo.cpp
    Volume/VolumeInfo.h
    Volume/VolumeLayout.cpp
    Volume/VolumeLayout.h
    Volume/VolumePassword.cpp
    Volume/VolumePassword.h
    Volume/VolumePasswordCache.cpp
    Volume/VolumePasswordCache.h
    Volume/VolumeSlot.h
    License.txt.h)

add_executable(truecrypt_sha3_master ${SOURCE_FILES})